# einsum

./: .flake8  .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
einsum/: __init__.py
tests/: test_einsum.py
