[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-einsum"
version = "0.0.1"
description = "Simple, readable Einstein Summation in Python."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    {name = "Karthik Kumar Viswanathan", email = "me@karthikkumar.org"},
    {name = "Grok 3.0", email = "support@x.ai"},
    {name = "Claude Sonnet 4", email = "claude@anthropic.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = ["ai", "einsum", "numpy", "einstein", "summation", "shape", "tensor", "matrix", "sum", "notation"]
requires-python = ">=3.8"
dependencies = [
    "numpy"
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950"
]

[project.urls]
Homepage = "https://github.com/guilt/einsum"
Repository = "https://github.com/guilt/einsum"
Documentation = "https://github.com/guilt/einsum/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["einsum"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
